[project]
name = "pajbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "flake8>=7.1.1",
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pytest>=8.3.2",
    "ruff>=0.6.9",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-colorama>=0.4.15.20240311",
    "types-markdown>=3.7.0.20240822",
    "types-psycopg2",
    "types-pytz>=2.32.0.20240914",
    "types-requests",
    "types-retry",
    # our own deps
    "pajbot",
    "utils",
]
package = false

[tool.uv.sources]
pajbot = { workspace = true }
utils = { workspace = true }

[tool.uv.workspace]
members = [
    "src/*",
    "internal/*",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
]
pythonpath = "src"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C90",
]
ignore = [
#     "E123",
#     "E126",
#     "E127",
#     "E128",
     "E501", # Line too long
     "C901", # Too complex
#     "E131",
     "E721", # use isinstance or is/is not. REMOVE THIS SOON xd
     "E722", # bare except
#     "Q003",
#     "Q000",
#     "W503",
#     "E203",
#     "E704",
]

[[tool.mypy.overrides]]
module = "irc.*"
ignore_missing_imports = true
