[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pajbot"
requires-python = ">=3.11"
version = "1.71"
dependencies = [
    "APScheduler==3.10.4",
    "autobahn==24.4.2",
    "beautifulsoup4==4.12.3",
    "colorama==0.4.6",
    "cssmin==0.2.0",
    "Flask==3.1.3",
    "Flask-Assets2==2.1",
    "irc==20.5.0",
    "isodate==0.6.1",
    "Jinja2==3.1.6",
    "jsmin==3.0.1",
    "Markdown==3.8.1",
    "MarkupSafe==2.1.5",
    "marshmallow-dataclass==8.7.1",
    "marshmallow==3.25.1",
    "psycopg2==2.9.11",
    "pylast==5.3.0",
    "pyOpenSSL==26.0.0",
    "pytz==2024.2",
    "rapidfuzz==3.14.5",
    "redis==5.0.8",
    "regex==2024.9.11",
    "requests==2.33.0",
    "retry==0.9.2",
    "riotwatcher==3.3.1",
    "service-identity==24.1.0",
    "SQLAlchemy==2.0.50",
    "SQLAlchemy-Utc==0.14.0",
    "tempora==5.7.0",
    "Twisted==26.4.0rc2",
    "Unidecode==1.3.8",
    "uWSGI==2.0.31",
    "urlextract==1.9.0",
    "Flask-WTF==1.2.1",
    "pytimeparse==1.1.8",
]

[project.optional-dependencies]
dev = [
    "black==26.5.1",
    "flake8==7.1.1",
    "pytest==9.0.3",
    "mypy==1.11.2",
    "isort==5.13.2",
    "types-cryptography==3.3.23.2",
    "types-enum34==1.1.8",
    "types-ipaddress==1.0.8",
    "types-Markdown==3.7.0.20240822",
    "types-pkg-resources==0.1.3",
    "types-pytz==2024.2.0.20240913",
    "types-redis==4.6.0.20240903",
    "types-requests==2.32.0.20240914",
    "types-retry==0.9.9.20260408",
    "types-psycopg2==2.9.21.20240819",
    "types-colorama==0.4.15.20240311",
    "types-beautifulsoup4==4.12.0.20240907",
]

[tool.setuptools.packages.find]
include = ["pajbot*"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

# select = [ "ALL" ]
select = [ "E", "F" ]

ignore = [
    "FIX", # Ignore flake8-fixme rules
    "D", # Ignore doc style stuff
    "ERA", # Ignore eradicate rules
# "ANN", # Ignore annotation/typing rules, rely on mypy for now
    "ANN101", # missing-type-self
    "ANN401", # disable any
    "ARG002", # unused method arg
    "RUF012", # class has mutable member
    "C901", # too complex
    "SIM108", # use-ternary
    "PLR0915", # too many statements
    "PLR0913", # too many arguments to function call
    "PLR2004", # magic value used in comparison
    "E722", # bare except
    "E501", # line too long
]

ignore-init-module-imports = true

[tool.ruff.isort.sections]
"typing" = ["typing"]

[tool.ruff.isort]
section-order = ["future", "typing", "standard-library", "first-party", "third-party", "local-folder"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.uv]
exclude-newer = "1 week"
