[project]
name = "pajbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.10.4",
    "autobahn>=24.4.2",
    "beautifulsoup4>=4.12.3",
    "colorama>=0.4.6",
    "irc>=20.5.0",
    "markdown>=3.7",
    "markupsafe>=2.1.5",
    "marshmallow-dataclass>=8.7.0",
    "marshmallow>=3.22.0",
    "psycopg2>=2.9.9",
    "pyopenssl>=24.2.1",
    "pytimeparse>=1.1.8",
    "rapidfuzz>=3.9.6",
    "redis>=5.0.8",
    "regex>=2024.7.24",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "service-identity>=24.1.0",
    "sqlalchemy-utc>=0.14.0",
    "sqlalchemy>=2.0.32",
    "twisted>=24.7.0",
    "unidecode>=1.3.8",
    "urlextract>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
