[project]
name = "pajbot"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
    "apscheduler>=3.10.4",
    "autobahn>=24.4.2",
    "beautifulsoup4>=4.12.3",
    "colorama>=0.4.6",
    "irc>=20.5.0",
    "markdown>=3.7",
    "markupsafe>=2.1.5",
    "marshmallow-dataclass>=8.7.0",
    "marshmallow>=3.22.0",
    "psycopg2>=2.9.9",
    "pyopenssl>=24.2.1",
    "pytimeparse>=1.1.8",
    "rapidfuzz>=3.9.6",
    "redis>=5.0.8",
    "regex>=2024.7.24",
    "requests>=2.32.3",
    "retry>=0.9.2",
    "service-identity>=24.1.0",
    "sqlalchemy-utc>=0.14.0",
    "sqlalchemy>=2.0.32",
    "twisted>=24.7.0",
    "unidecode>=1.3.8",
    "urlextract>=1.9.0",
    "flask-assets2>=2.1",
    "flask-wtf>=1.2.1",
    "flask>=3.0.3",
    "utils",
    "pyjwt>=2.10.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "ruff>=0.6.9",
    "pyright>=1.1.390",
    "types-beautifulsoup4>=4.12.0.20240907",
    "types-colorama>=0.4.15.20240311",
    "types-markdown>=3.7.0.20240822",
    "types-pytz>=2.32.0.20240914",
    "types-retry>=0.9.9.4",
    "types-requests>=2.32.0.20240914",
    "types-psycopg2>=2.9.21.20240819",
]

[project.scripts]
run = "pajbot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
